Add EDA & RFM analysis notebook

--- a/notebooks/01_eda_rfm_retention.ipynb
+++ b/notebooks/01_eda_rfm_retention.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyyddUmorp0n2+6qUjzk+S",
+      "authorship_tag": "ABX9TyNk3dOE/8menJKxEOuamJWQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,22 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/gregoriussitindaon/ecommerce-customer-revenue-retention-analysis/blob/main/notebooks/01_eda_rfm_retention.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Customer Revenue & Retention Analysis (E-Commerce)\n",
+        "\n",
+        "Analisis ini bertujuan untuk memahami bagaimana pola transaksi pelanggan berkontribusi terhadap pendapatan perusahaan e-commerce, serta mengidentifikasi segmen pelanggan yang paling bernilai untuk strategi retensi.\n",
+        "\n",
+        "Fokus utama:\n",
+        "- Mengukur distribusi pendapatan per pelanggan.\n",
+        "- Menyusun segmentasi pelanggan berbasis RFM (Recency, Frequency, Monetary).\n",
+        "- Memberi rekomendasi taktis berbasis data untuk mendukung keputusan bisnis.\n"
+      ],
+      "metadata": {
+        "id": "C8BzwKd0kbwj"
+      }
     },
     {
       "cell_type": "code",
@@ -97,6 +113,29 @@
       },
       "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Overview & Business Assumptions\n",
+        "\n",
+        "Dataset yang digunakan merepresentasikan transaksi e-commerce multi-seller, dengan beberapa tabel utama:\n",
+        "- **orders**: informasi pesanan dan status pengiriman,\n",
+        "- **order_items**: detail produk per pesanan,\n",
+        "- **payments**: nilai pembayaran,\n",
+        "- **customers**: identitas unik pelanggan,\n",
+        "- **products**: kategori produk.\n",
+        "\n",
+        "Agar analisis lebih relevan dengan pendapatan aktual, beberapa keputusan dibuat:\n",
+        "1. Hanya pesanan dengan status `delivered` yang dihitung sebagai _revenue_.\n",
+        "2. Nilai pendapatan dihitung dari kombinasi harga produk dan biaya pengiriman yang dibayar pelanggan.\n",
+        "3. Analisis difokuskan pada level **customer_unique_id** untuk menangkap perilaku pelanggan, bukan hanya jumlah order.\n",
+        "\n",
+        "Pendekatan ini meniru praktik analitik di perusahaan, di mana kualitas data dan definisi metrik harus ditentukan secara eksplisit sebelum interpretasi bisnis dilakukan."
+      ],
+      "metadata": {
+        "id": "A9ntYS4rkj5X"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1609,6 +1648,25 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## RFM Methodology\n",
+        "\n",
+        "Untuk memprofilkan nilai pelanggan, digunakan pendekatan **RFM (Recency, Frequency, Monetary)**:\n",
+        "\n",
+        "- **Recency**: jumlah hari sejak transaksi terakhir sampai _snapshot date_. Semakin kecil → semakin baru/aktif.\n",
+        "- **Frequency**: jumlah pesanan yang dilakukan pelanggan. Semakin sering → semakin engaged.\n",
+        "- **Monetary**: total nilai transaksi pelanggan. Semakin besar → semakin bernilai secara finansial.\n",
+        "\n",
+        "Skor R, F, dan M dibentuk menggunakan kuartil:\n",
+        "- Pelanggan dengan performa lebih baik pada masing-masing dimensi mendapat skor lebih tinggi.\n",
+        "- Skor digabungkan menjadi `rfm_score` untuk memetakan pelanggan ke beberapa segmen prioritas."
+      ],
+      "metadata": {
+        "id": "JxKNZfO8k68W"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**6. HITUNG RECENCY & TABEL RFM**"
       ],
       "metadata": {
@@ -2414,6 +2472,27 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Customer Segmentation Logic\n",
+        "\n",
+        "Segmentasi sederhana digunakan untuk mengelompokkan pelanggan:\n",
+        "\n",
+        "- **Champion**: skor RFM tertinggi. Pelanggan sangat aktif dan berkontribusi besar terhadap revenue.\n",
+        "- **Loyal**: pembeli berulang dengan nilai transaksi yang konsisten.\n",
+        "- **Potential Loyalist**: pelanggan dengan potensi menjadi loyal jika dikelola dengan tepat.\n",
+        "- **At Risk / Low Value**: pelanggan dengan frekuensi rendah, nilai kecil, atau sudah lama tidak bertransaksi.\n",
+        "\n",
+        "Segmentasi ini bukan hanya klasifikasi teknis, tetapi fondasi untuk strategi:\n",
+        "- program loyalitas,\n",
+        "- prioritas layanan,\n",
+        "- campaign retensi yang lebih terarah."
+      ],
+      "metadata": {
+        "id": "ZdBKP6otlAkO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**9. ANALISIS KONTRIBUSI REVENUE per SEGMEN**"
       ],
       "metadata": {
@@ -2811,6 +2890,38 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Key Insights (Illustrative)\n",
+        "\n",
+        "Beberapa pola utama dari hasil analisis (contoh, sesuaikan dengan output aktual):\n",
+        "\n",
+        "1. **Konsentrasi Pendapatan**\n",
+        "   - Sebagian besar pendapatan terkonsentrasi pada segmen *Champion* dan *Loyal Customers*.\n",
+        "   - Implikasi: kehilangan sebagian kecil pelanggan di segmen ini akan berdampak signifikan pada pendapatan total.\n",
+        "\n",
+        "2. **Dominasi Single-Purchase Customers**\n",
+        "   - Proporsi pelanggan dengan hanya satu transaksi cukup besar.\n",
+        "   - Hal ini menunjukkan bahwa proses akuisisi berjalan, tetapi mekanisme retensi belum optimal.\n",
+        "\n",
+        "3. **Peluang Retensi**\n",
+        "   - Segmen *Potential Loyalist* memiliki frekuensi dan nilai transaksi menengah.\n",
+        "   - Dengan intervensi yang tepat (personalized offer, free shipping, priority support), segmen ini berpotensi naik menjadi *Loyal* atau *Champion*.\n",
+        "\n",
+        "4. **Distribusi Nilai Transaksi**\n",
+        "   - Distribusi monetary menunjukkan ekor panjang (sedikit pelanggan dengan nilai transaksi sangat tinggi).\n",
+        "   - Pelanggan ini layak mendapatkan program VIP atau layanan premium untuk menjaga loyalitas mereka.\n",
+        "\n",
+        "Insight ini relevan secara bisnis karena langsung terkait dengan strategi:\n",
+        "- pengalokasian budget marketing,\n",
+        "- desain program loyalitas,\n",
+        "- prioritas peningkatan kualitas layanan."
+      ],
+      "metadata": {
+        "id": "zgyqYEEvlGpz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**10. DISTRIBUSI FREQUENCY & MONETARY**"
       ],
       "metadata": {
@@ -2882,6 +2993,37 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Business Recommendations\n",
+        "\n",
+        "Berdasarkan analisis RFM dan pola transaksi pelanggan, beberapa rekomendasi strategis yang dapat dipertimbangkan:\n",
+        "\n",
+        "1. **Prioritaskan Segmen High-Value**\n",
+        "   Fokuskan program loyalitas, layanan cepat, dan komunikasi personal pada segmen *Champion* dan *Loyal*, karena mereka menyumbang porsi pendapatan terbesar.\n",
+        "\n",
+        "2. **Aktifkan Program Retensi Dini**\n",
+        "   Rancang campaign otomatis untuk pelanggan baru dalam 30–60 hari pertama\n",
+        "   (contoh: diskon repeat order, bundling produk, reminder keranjang).\n",
+        "\n",
+        "3. **Optimalkan Biaya Akuisisi**\n",
+        "   Jika proporsi pelanggan sekali beli sangat tinggi, evaluasi strategi akuisisi:\n",
+        "   - apakah channel marketing mendatangkan pelanggan yang berkualitas,\n",
+        "   - atau hanya menghasilkan _one-time buyer_ yang tidak berkontribusi jangka panjang.\n",
+        "\n",
+        "4. **Gunakan Segmentasi untuk Personalisasi**\n",
+        "   Terapkan messaging yang berbeda per segmen:\n",
+        "   - *Champion*: eksklusivitas dan early access.\n",
+        "   - *Potential Loyalist*: insentif untuk repeat.\n",
+        "   - *At Risk*: win-back campaign dengan penawaran khusus.\n",
+        "\n",
+        "Analisis ini menunjukkan bagaimana Python dan data transaksi dapat diterjemahkan menjadi keputusan bisnis yang terukur, bukan sekadar visualisasi deskriptif."
+      ],
+      "metadata": {
+        "id": "8llVU_sIkvjs"
+      }
     }
   ]
 }
